--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
 version: '3'
 services:
-    db:
-        image: mysql:5.7.22
-        volumes:
-              - ./db/mysql_data:/var/lib/mysql
-        ports:
-             - "3307:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_USER: test
-            MYSQL_PASSWORD: test
-            MYSQL_DATABASE: test
+  db:
+    image: mysql:5.7.22
+    volumes:
+      - ./db/mysql_data:/var/lib/mysql
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test
+      MYSQL_DATABASE: test
+
+  tpay:
+    build: .
+    ports:
+      - "9000:9000"
+    volumes:
+      - .:/app
