--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,24 @@ version: '3'
 services:
   db:
     image: mysql:5.7.22
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./db/mysql_data:/var/lib/mysql
-    ports:
-      - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: test
       MYSQL_PASSWORD: test
       MYSQL_DATABASE: test
+    restart: always
 
   tpay:
     build: .
+    command: sh -c "./wait-for-it.sh db:3306; python3 manage.py runserver 0.0.0.0:9000"
     ports:
       - "9000:9000"
     volumes:
       - .:/app
+    environment:
+      DB_HOST_NAME: db
+    depends_on:
+      - db
