--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,10 @@
-amqp==2.4.0
-asgiref==2.3.2
-async-timeout==3.0.1
-attrs==18.2.0
-autobahn==19.1.1
-Automat==0.7.0
-billiard==3.5.0.5
-celery==4.2.1
-certifi==2018.11.29
-channels==2.1.6
-chardet==3.0.4
-constantly==15.1.0
-coreapi==2.3.3
-coreschema==0.0.4
-daphne==2.2.4
-Django==2.1.5
-django-filter==2.0.0
-django-jet==1.0.8
-django-python3-ldap==0.11.2
-django-rest-hooks==1.5.0
-djangorestframework==3.9.0
+Django==2.1.7
+django-filter==2.1.0
+djangorestframework==3.9.1
 djangorestframework-jwt==1.11.0
-hyperlink==18.0.0
-idna==2.8
-incremental==17.5.0
-itypes==1.1.0
-Jinja2==2.10
-kombu==4.2.2.post1
-ldap3==2.5
-MarkupSafe==1.1.0
-mysqlclient==1.4.2
+mysqlclient==1.4.2.post1
 Pillow==5.4.1
-pyasn1==0.4.4
-PyHamcrest==1.9.0
 PyJWT==1.7.1
 PyMySQL==0.9.3
 pytz==2018.9
-PyYAML==3.13
-redis==3.0.1
-requests==2.21.0
-six==1.12.0
-Twisted==18.9.0
-txaio==18.8.1
-ulid-py==0.0.9
-uritemplate==3.0.0
-urllib3==1.24.1
-vine==1.2.0
-zope.interface==4.6.0
+ulid==1.1
