--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,13 @@ services:
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./db/mysql_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: test
-      MYSQL_PASSWORD: test
-      MYSQL_DATABASE: test
+    env_file: .env
     restart: always
 
   tpay:
     build: tpay
     volumes:
       - ./tpay:/app
-    environment:
-      MYSQL_DATABASE: test
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_HOSTNAME: db
+    env_file: .env
     depends_on:
       - db
