--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@ MYSQL_USER: test
 MYSQL_PASSWORD: test
 MYSQL_DATABASE: test
 MYSQL_HOSTNAME: db
+
+# Django Settings
+SECRET_KEY='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
