--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,15 @@ services:
     env_file: .env
     depends_on:
       - db
+
+  nginx:
+    build: nginx
+    ports:
+      - "8000:8000"
+    environment:
+      UWSGI_HOST: tpay
+    volumes:
+      - ./tpay/static:/tpay_static
+      - ./tpay/media:/tpay_media
+    depends_on:
+      - tpay
