--- a/tpay/Dockerfile
+++ b/tpay/Dockerfile
@@ -1,15 +1,21 @@
-FROM python:3.6.5
+FROM python:3.6-alpine3.8
 
 ENV PYTHONUNBUFFERED 1
 ARG project_dir=/app/
 
-# Install Requirements
 ADD requirements.txt $project_dir
 WORKDIR $project_dir
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
-ADD . $project_dir
 
+RUN apk --no-cache --virtual .requirements add g++ make linux-headers && \
+    apk --no-cache add libjpeg jpeg-dev libffi-dev mysql-dev mysql-client && \
+    pip install --upgrade pip && \
+    pip install -r requirements.txt && rm -rf ~/.cache/pip && \
+    apk del .requirements
+
+ADD . $project_dir
 COPY docker-entrypoint.sh /usr/bin/
+RUN chmod 755 /usr/bin/docker-entrypoint.sh
+
 ENTRYPOINT ["docker-entrypoint.sh"]
-CMD ["uwsgi", "--socket", ":8000", "--module", "mysite.wsgi"]
+
+CMD ["uwsgi", "--ini", "tpay_uwsgi.ini"]
