--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,4 @@ MYSQL_HOSTNAME: db
 
 # Django Settings
 SECRET_KEY='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+DJANGO_HOSTNAME=tpay-stg.t-lab.cs.teu.ac.jp
