--- a/nginx/tpay_nginx.conf
+++ b/nginx/tpay_nginx.conf
@@ -16,8 +16,12 @@ server {
         alias /tpay_static;
     }
 
-    location / {
+    location /api {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params;
+    }
+
+    location / {
+        root /tpay_front;
     }
 }
