--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.10",
     "@nuxtjs/style-resources": "^0.1.2",
     "cross-env": "^5.2.0",
     "element-ui": "^2.5.4",
