--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,8 @@
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-onsenui-module": "^1.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
