--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - ./db/mysql_data:/var/lib/mysql
     env_file: .env
     restart: always
+    ports:
+      - "3307:3306"
 
   tpay:
     build: tpay
