--- a/front/app/.env.production
+++ b/front/app/.env.production
@@ -1,3 +1,3 @@
 # ------- t-pay API情報 --------
-API_HOST='http://127.0.0.1:8000/api/v1'
+API_HOST='https://tpay-stg.t-lab.cs.teu.ac.jp/api/v1'
 # ---------------------------------
