--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,7 +17,17 @@ services:
     env_file: .env
     depends_on:
       - db
-    ports:
-      - "8080:8080"
-    command: "python manage.py runserver 0.0.0.0:8080 --settings=config.settings.develop"
 
+  nginx:
+    build: nginx
+    ports:
+      - "8000:8000"
+      - "9000:9000"
+    environment:
+      UWSGI_HOST: tpay
+    volumes:
+      - ./tpay/static:/tpay_static
+      - ./tpay/media:/tpay_media
+      - ./front/dist:/tpay_front
+    depends_on:
+      - tpay
